﻿v1.5.0.0
IMPROVEMENTS
- Major internal refactor to better organise code.
- Switch to a single DLL release.
- General:
	- Add missing HP rounding to some parts.
- AI:
	- Add a 5° deadzone around being on target for dynamic damping to avoid feed-back loop in PID.
	- Add a check for requested extending already being satisfied.
	- Add terrain awareness to the pilot AI's waypoint fly-to direction.
	- Add a 'Waypoint Terrain Avoidance' slider to the pilot AI to control the range and strength of the waypoint terrain avoidance reaction.
- GameModes:
	- Waypoints:
		- Add support for multiple waypoint gate models.
		- Add waypoint scaling from 50-1000m.
		- Altitude overrides for S4R10.
		- Remember the previously used HoSTag.
		- Add right click to 'Run waypoints' to spawn with the vessel spawner coordinates instead of the hard-coded ones.
		- Add multiple courses and a selection UI.
- Weapons:
	- Use min of missile drop time or 2 sec instead of fixed two second period for check target will be within missile maxOffBoresight at future time.
- RWP:
	- Hall of Shame now supports multiple craft.
	- Add HoS support to Waypoint mode.

v1.4.18.4
IMPROVEMENTS
- Add slider in the pilot AI for controlling the waypoint pre-roll time.
- Add slider in the pilot AI for waypoint yaw authority time to switch from normal steering mode control of yaw to aiming steering mode of yaw when approaching waypoints.
- Add relevant AI GUI entries for these too.
- Also check for WM when checking that a waypoint competition is running.

v1.4.18.3
IMPROVEMENTS
- Waypoint visualization added.
	- 3 rings with radii 500m, 100m and 10m, with a central crosshair and animated arrows.
	- Togglable in the Waypoints Options section of the Vessel Spawner window.
	- Waypoint model can be customized to whatever, provided the model URL is "BDArmory/Models/WayPoint/model".

v1.4.18.2
IMPROVEMENTS