@@ -116,6 +116,7 @@ Localization
         #LOC_BDArmory_Settings_RemoteFiring = Remote Firing
         #LOC_BDArmory_Settings_ClearanceCheck = Clearance Check
         #LOC_BDArmory_Settings_AmmoGauges = Ammo Gauges
+        #LOC_BDArmory_Settings_FlareSmoke = Flare Smoke
         #LOC_BDArmory_Settings_ShellCollisions = Shell Collisions
         #LOC_BDArmory_Settings_BulletHoleDecals = Bullet Hole Decals
         #LOC_BDArmory_Settings_PerformanceLogging = Performance Logging
